// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseSentence should be able to parse example 1 1`] = `
Object {
  "description": "Emma is at Moma's homepage. After briefly scanning the page she decides that the Explore Architecture section might be the best place to start rather than search.",
  "orientation": "@Moma's",
  "routes": null,
}
`;

exports[`parseSentence should be able to parse example 2 1`] = `
Object {
  "description": "She sees options to view Feature Based Content and also an area called Themes with Links to the various themes.",
  "orientation": null,
  "routes": Array [
    "=\\"Feature Based Content\\"",
    "=\\"Themes with Links\\"",
  ],
}
`;

exports[`parseSentence should be able to parse example 3 1`] = `
Object {
  "description": "Emma chooses to Browse by Style having seen some of the Art Deco pictures in her original search.",
  "orientation": "@\\"Browse by Style\\"",
  "routes": null,
}
`;
